--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,11 +18,11 @@
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Position:
-                                    <strong><a href="http://startbootstrap.com">{{ post.position }}</a>
+                                    <strong>{{ post.position }}
                                     </strong>
                                 </li>
                                 <li>Major:
-                                    <strong><a href="http://startbootstrap.com">{{ post.major }}</a>
+                                    <strong>{{ post.major }}
                                     </strong>
                                 </li>
                             </ul>
