--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,13 +19,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Staff Members</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#about">Learn More</a>
                     </li>
                 </ul>
             </div>
