--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,6 +16,17 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p>{{ post.description }}</p>
+                            <ul>
+                                <li>
+                                    {{ post.goal1 }}
+                                </li>
+                                <li>
+                                    {{ post.goal2 }}
+                                </li>
+                                <li>
+                                    {{ post.goal3 }}
+                                </li>
+                            </ul>
                             <ul class="list-inline item-details">
                                 <li>Position:
                                     <strong>{{ post.position }}
