--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>The Dougherty squadron is ready and willing to take Arnold Air Society to the next level while assisting the Silver Wings National Staff to do the same. We have spent a lot of time not only preparing our bid, but ensuring that this year will include major strides towards continued success.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>We hope you will consider the Dougherty squadron as AAS National Staff for the 2015-2016 term. Thanks for visiting, and enjoy CHICON 2015!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="packet.pdf" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> View Packet
                     </a>
                 </div>
             </div>
