--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,17 +16,10 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p>{{ post.description }}</p>
-                            <ul>
-                                <li>
-                                    {{ post.goal1 }}
-                                </li>
-                                <li>
-                                    {{ post.goal2 }}
-                                </li>
-                                <li>
-                                    {{ post.goal3 }}
-                                </li>
-                            </ul>
+                            <p><strong>Goals</strong><br/>
+                                {{ post.goal1 }}<br/>
+                                {{ post.goal2 }}<br/>
+                                {{ post.goal3 }}</p>
                             <ul class="list-inline item-details">
                                 <li>Position:
                                     <strong>{{ post.position }}
