--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,10 @@
                     <div class="footer-col col-md-4">
                         <h3>{{ site.footer.location }}</h3>
                         <p>
-                            {% for adress in site.address %}
+                            <!--{% for adress in site.address %}
                                 {{ adress.line }} <br>
-		                    {% endfor %}
+		                    {% endfor %}-->
+                            <img src="/img/rit_tiger.png"/>
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
@@ -23,7 +24,8 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>{{ site.footer.credits }}</h3>
-                        <p>{{ site.credits }}</p>
+                        <p><!--{{ site.credits }}-->
+                        <img src="/img/blue_tiger.png"/></p>
                     </div>
                 </div>
             </div>
@@ -32,7 +34,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
+                        {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
                     </div>
                 </div>
             </div>
