--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -17,9 +17,9 @@
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p>{{ post.description }}</p>
                             <p><strong>Goals</strong><br/>
-                                (1) {{ post.goal1 }}<br/>
-                                (2) {{ post.goal2 }}<br/>
-                                (3) {{ post.goal3 }}</p>
+                                {{ post.goal1 }}<br/>
+                                {{ post.goal2 }}<br/>
+                                {{ post.goal3 }}</p>
                             <ul class="list-inline item-details">
                                 <li>Position:
                                     <strong>{{ post.position }}
