--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/staff.jpg" alt="">
                     <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
+                        <span class="name">Proposed AAS National Staff 2015-2016</span>
                         <hr class="star-light">
-                        <span class="skills">for AAS National Staff 2015-2016</span>
+                        <span class="skills">{{ site.title }}</span>
                     </div>
                 </div>
             </div>
