--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="intro-text">
                         <span class="name">Proposed AAS National Staff 2015-2016</span>
                         <hr class="star-light">
-                        <span class="skills">{{ site.title }}</span>
+                        <span class="skills">Col Andrew J. Dougherty Squadron</span>
                     </div>
                 </div>
             </div>
