improved about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,11 +12,11 @@
                     <p>The Dougherty squadron is ready and willing to take Arnold Air Society to the next level while assisting the Silver Wings National Staff to do the same. We have spent a lot of time not only preparing our bid, but ensuring that this year will include major strides towards continued success.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>We hope you will consider the Dougherty squadron as AAS National Staff for the 2015-2016 term. Thanks for visiting, and enjoy CHICON 2015!</p>
+                    <p>We hope you will consider the Dougherty squadron as AAS National Staff for the 2015-2016 term. You may access the complete digital version of our bid below. Thanks for visiting, and enjoy CHICON 2015!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="packet.pdf" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> View Packet
+                        <i class="fa fa-download"></i> View Complete Packet
                     </a>
                 </div>
             </div>
