--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -197,6 +197,12 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+
+    border-radius: 100%;
+
+    margin-top: -100px;
+    z-index:  1;
+    border: 4px solid white;
 }
 
 #portfolio .portfolio-item .portfolio-link {
