--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -197,12 +197,6 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
-
-    border-radius: 100%;
-
-    margin-top: -100px;
-    z-index:  1;
-    border: 4px solid white;
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -221,6 +215,11 @@ section.success {
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
+
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border: 4px solid gold;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
