--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -258,6 +258,11 @@ section.success {
 
 #portfolio * {
     z-index: 2;
+
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border: 4px solid gold;
 }
 
 @media(min-width:767px) {
