--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -408,6 +408,8 @@ footer .footer-below {
 
 .portfolio-modal .modal-content img {
     margin-bottom: 30px;
+    margin-left: 30px;
+    
     border-radius: 100%;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
