--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/staff.jpg" alt="">
+                    <img class="img-responsive" src="img/staff.jpg" alt="" style="border: 4px solid #2c3e50">
                     <div class="intro-text">
                         <span class="name">Proposed AAS National Staff 2015-2016</span>
                         <hr class="star-light">
