--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -203,7 +203,7 @@ section.success {
     border-radius: 100%;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
-    border: 4px solid gold;
+    border: 4px solid #cc9900;
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -226,7 +226,7 @@ section.success {
     border-radius: 100%;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
-    border: 4px solid gold;
+    border: 4px solid #cc9900;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
