--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -416,7 +416,7 @@ footer .footer-below {
 .portfolio-modal .modal-content img {
     margin-bottom: 30px;
 
-    border: 4px solid black;
+    border: 4px solid #2c3e50;
 }
 
 .portfolio-modal .modal-content .item-details {
