--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,7 +15,8 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p>{{ post.description }}</p>
+                            <p><strong>About</strong><br/>
+                                {{ post.description }}</p>
                             <p><strong>Goals</strong><br/>
                                 {{ post.goal1 }}<br/>
                                 {{ post.goal2 }}<br/>
