--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Made with <i class="fa fa-heart"></i> by the {{ site.footer.copyright }}.
+                        Made with <i class="fa fa-heart" style="color: red"></i> by the {{ site.footer.copyright }}.
                     </div>
                 </div>
             </div>
