--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/staff.jpg" alt="" style="border: 4px solid #2c3e50">
                     <div class="intro-text">
-                        <span class="name">Proposed AAS National Staff 2015-2016</span>
+                        <span class="name">Proposed<br/>AAS National Staff<br/>2015-2016</span>
                         <hr class="star-light">
                         <span class="skills">{{ site.title }}</span>
                     </div>
