--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,11 +18,11 @@
                             <p><strong>About</strong><br/>
                                 {{ post.description }}</p>
                             <p><strong>Goals</strong><br/>
-                                <em>{{ post.goal1title }}</em><br/>
+                                <em>{{ post.goal1title }}</em><br/><br/>
                                 {{ post.goal1 }}<br/>
-                                <em>{{ post.goal2title }}</em><br/>
+                                <em>{{ post.goal2title }}</em><br/><br/>
                                 {{ post.goal2 }}<br/>
-                                <em>{{ post.goal3title }}</em><br/>
+                                <em>{{ post.goal3title }}</em><br/><br/>
                                 {{ post.goal3 }}</p>
                             <ul class="list-inline item-details">
                                 <li>Position:
