further modal improvements

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -17,12 +17,12 @@
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p><strong>About</strong><br/>
                                 {{ post.description }}</p>
-                            <p><strong>Goals</strong><br/>
-                                <em>{{ post.goal1title }}</em><br/><br/>
-                                {{ post.goal1 }}<br/>
-                                <em>{{ post.goal2title }}</em><br/><br/>
-                                {{ post.goal2 }}<br/>
-                                <em>{{ post.goal3title }}</em><br/><br/>
+                            <p><strong>Goals</strong><br/><br/>
+                                <em>{{ post.goal1title }}</em><br/>
+                                {{ post.goal1 }}<br/><br/>
+                                <em>{{ post.goal2title }}</em><br/>
+                                {{ post.goal2 }}<br/><br/>
+                                <em>{{ post.goal3title }}</em><br/>
                                 {{ post.goal3 }}</p>
                             <ul class="list-inline item-details">
                                 <li>Position:
