update RIT image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                             <!--{% for adress in site.address %}
                                 {{ adress.line }} <br>
 		                    {% endfor %}-->
-                            <img src="/img/rit_tiger.png"/>
+                            <img src="/img/rit_logo.png"/>
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
