Improve readability of goals

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,14 +15,14 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p><strong>About</strong><br/>
+                            <p><h3>About</h3><br/>
                                 {{ post.description }}</p>
-                            <p><strong>Goals</strong><br/><br/>
-                                <em>{{ post.goal1title }}</em><br/>
+                            <p><h3>Goals</h3><br/><br/>
+                                <strong><em>{{ post.goal1title }}</em></strong><br/>
                                 {{ post.goal1 }}<br/><br/>
-                                <em>{{ post.goal2title }}</em><br/>
+                                <strong><em>{{ post.goal2title }}</em></strong><br/>
                                 {{ post.goal2 }}<br/><br/>
-                                <em>{{ post.goal3title }}</em><br/>
+                                <strong><em>{{ post.goal3title }}</em></strong><br/>
                                 {{ post.goal3 }}</p>
                             <ul class="list-inline item-details">
                                 <li>Position:
