--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,9 +15,9 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p><h3>About</h3><br/>
+                            <p><h3>About</h3>
                                 {{ post.description }}</p>
-                            <p><h3>Goals</h3><br/><br/>
+                            <p><h3>Goals</h3>
                                 <strong><em>{{ post.goal1title }}</em></strong><br/>
                                 {{ post.goal1 }}<br/><br/>
                                 <strong><em>{{ post.goal2title }}</em></strong><br/>
